kubernetes/apps/whoami/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
  labels:
    app.kubernetes.io/name: whoami
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
  hostnames:
    - whoami.apps.mbhome.biz
  rules:
    - backendRefs:
        - name: whoami
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-test
  namespace: whoami
  labels:
    app.kubernetes.io/name: whoami
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
  hostnames:
    - whoami-test.apps.mbhome.biz
  rules:
    - backendRefs:
        - name: whoami
          port: 80
